<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Travel Assistant</string>
    <!-- activity tittle -->
    <string name="login_title">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_show_route">Show Route</string>
    <string name="title_activity_start_new_route">New Route</string>
    <string name="title_activity_choose_route">Choose Route</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_plan_route">Plan Route</string>
    <string name="title_activity_about">About</string>

    <!-- login activity -->
    <string name="uname">Username</string>
    <string name="userName">Enter username</string>
    <string name="userPassword">Enter password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Singup</string>
    <string name="tooShort">Either Username or Login is too short</string>
    <string name="loginSucces">"You are successfully logged in!</string>
    <string name="emptyField">"Don't leave any field empty"</string>
    
    <!-- register activity -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="tvWelcomeBar">Welcome</string>
    <string name="password">Password</string>
    <string name="registerSucces">You are successfully registered!</string>

    <!-- marker dialog -->
    <string name="markerinfo">Marker info</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="snippet">Snippet</string>
    <string name="delete">Delete</string>

    <!-- route info dialog -->
    <string name="routeinfo">Route Info</string>
    <string name="routename">Name</string>
    <string name="routecity">City</string>
    <string name="routedescription">Description</string>

    <!-- home activity -->
    <string name="logout">Logout</string>
    <string name="planRoute">Plan route</string>
    <string name="startNewRoute">Start new route</string>
    <string name="chooseRoute">Choose route</string>

    <!-- Home menu -->
    <string name="synchronize">Synchronize</string>
    <string name="nothingToSycnh">"Either not connected to internet or nothing to persist"</string>
    <string name="about">About</string>

    <!-- Start New Route -->
    <string name="addMarker">Mark position</string>
    <string name="showDescription">Show description</string>
    <string name="close">Close</string>
    <string name="checkGPS">"Location problem. Make sure GPS service is ON"</string>

    <!-- Choose Route -->
    <string name="noConnection">You are not connected to the internet</string>
    <string name="notConnected">\tYou are not connected to the internet. \n\t Check connection status.	\n\tShow last obtained list?</string>
	<string name="offlineList">Offline List</string>
	<string name="show">Show</string>
	<string name="noOfflineRoutesList">No predownloaded routes list to show</string>
  
	<!-- map menu -->
    <string name="neww">New</string>
    <string name="save">Save</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="showUserLocation">Show location</string>
    <string name="searchHint">Search</string>

    <!-- show criteria dialog -->
    <string name="criteriacity">City</string>
    <string name="criteriaauthor">Author</string>
    <string name="criteriashowmy">Show my routes</string>
    <string name="criteriashowall">Show all routes</string>
    <string name="select">Select</string>
    <string name="cantbenull">Field can NOT be empty</string>
    <!--  -->

    <string name="nothingToPersist">Nothing to persist</string>
    <string name="unnableToCreateMap">Error! Unable to create map</string>

    <!-- ARE YOU SURE Dialog -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantSaveTitle">Clean Map?</string>
    <string name="wantSaveDesc">Are you sure you want to clean the map? All data will be lost.</string>
    <string name="wantDeleteTitle">Delete Route?</string>
    <string name="wantDeleteDesc">Are you sure you want to delete this route?</string>
    <string name="wantLogoutTitle">Logout?</string>
    <string name="wantLogoutDesc">Are you sure you want to logout?</string>

    <!-- TOAST when invoking REST -->
    <string name="err404">Requested resource not found</string>
    <string name="err500">Something went wrong at server end</string>
    <string name="otherErr">Unexpected Error occcured! [remote server might be offline]</string>
    <string name="invalidJSON">Error Occurred [Server JSON response might be invalid]!</string>

    <!-- ActionBar -->
    <string name="abSearch">Search</string>
    <string name="abShowLocation">Show location</string>
    <string name="abRefresh">Refresh</string>

    <!-- slide menu BEGIN -->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Slider Menu Items -->
    <string name="s_home">Home</string>
    <string name="s_planRoute">Plan Route</string>
    <string name="s_chooseRoute">Choose Route</string>
    <string name="s_startNewRoute">Start New Route</string>
    <string-array name="slider_menu_items">
        <item>@string/s_home</item>
        <item>@string/s_planRoute</item>
        <item>@string/s_chooseRoute</item>
        <item>@string/s_startNewRoute</item>
    </string-array>

    <!-- Slider Menu List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="slider_menu_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_planr</item>
        <item>@drawable/ic_chooser</item>
        <item>@drawable/ic_startr</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <!-- slide menu END -->


	<string name="aboutText">Personal Travel Assistant will help you in your travels.\n 
	    Features: \n 
	    -Planning route for future use. \n
	    -Creating route during your travel. \n
	    -Using routes created by other users.\n
	    -Also gives possibility to work without connection to the internet\n
	    \n
	    \n
	    Icons used in the application comes from: \n
	    icons8.com
	    </string>
</resources>