<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.pap.client.ShowRouteActivity" >

    <item
        android:id="@+id/showRouteInfoItem"
        android:orderInCategory="1"
        android:title="@string/info">
    </item>
    <item
        android:id="@+id/showRouteEditItem"
        android:enabled="false"
        android:orderInCategory="2"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/showRouteSaveItem"
        android:orderInCategory="3"
        android:title="@string/save"
        android:visible="false">
    </item>
    <item
        android:id="@+id/showRouteDeleteItem"
        android:orderInCategory="4"
        android:title="@string/delete"
        android:visible="true">
    </item>
   <item
        android:id="@+id/action_showLocation"
        android:icon="@drawable/ic_action_location_found"
        android:showAsAction="ifRoom"
        android:title="@string/abSearch"/>

</menu>