<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.pap.client.MapActivity" >

    <item
        android:id="@+id/action_lookUp"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"
        android:title="@string/abSearch"/>
    <!-- android:icon="@drawable/ic_action_search" -->
    <item
        android:id="@+id/item1"
        android:orderInCategory="1"
        android:title="@string/neww">
    </item>
    <item
        android:id="@+id/item2"
        android:orderInCategory="2"
        android:title="@string/save">
    </item>
    <item
        android:id="@+id/item3"
        android:orderInCategory="3"
        android:title="@string/info">
    </item>

</menu>