<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip" >
 
        <!-- View Title Label -->
 
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_register"
            android:textSize="25sp"
            android:textStyle="bold" />
        <!-- Name Label -->
 
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        <!-- Name TextField -->
 
        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:hint="@string/userName"/>
 
      
 
        <!-- Password Label -->
 
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/pwd" />
        <!-- Password TextField -->
 
        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userPassword"
            android:inputType="textPassword" />
 
        <!-- Error message -->
 
        <TextView
            android:id="@+id/registerError"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />
 
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#060"
            android:onClick="registerUser"
            android:text="@string/btnRegister"
            android:textColor="#fff" />
 
        <!-- Link to Login Screen -->
 
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:onClick="navigateToLoginActivity"
            android:text="@string/btnLogin"
            android:textColor="#228b22"
            android:textStyle="bold" />
    </LinearLayout>
 
</ScrollView>