<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/tvWelcomeBar"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/tvWelcomeBar"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#AE9B08"
            android:onClick="navigateToPlanRouteActivity"
            android:text="@string/planRoute" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#B86209"
            android:onClick="navigateToStartNewRouteActivity"
            android:text="@string/startNewRoute" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#7009B8"
            android:onClick="navigateToShowRouteActivity"
            android:text="@string/chooseRoute" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#A10000"
            android:onClick="logout"
            android:text="@string/logout" />
    </LinearLayout>

    <!-- Listview to display slider menu -->

    <ListView
        android:id="@+id/listView_sliderMenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector" />

</android.support.v4.widget.DrawerLayout>